--- a/paper/paper.tex
+++ b/paper/paper.tex
@@ -125,12 +125,12 @@ $^2$Instituto de F\'{\i}sica - FCEN, Universidad de Antioquia, Calle
 
 \begin{abstract}
 
-In a dark matter dominated Universe galaxy properties are driven by
-dark matter halo characteristics. 
+In a dark matter dominated universe galaxy properties are driven by
+the dark matter halo host.
 One of the key structural halo properties is the concentration. 
 [EN QUE MODELOS IMPORTA LA CONCENTRACION?]
-For these reasons there has been a lot of effort to have a reliable
-concentration estimate from N-body simulations.
+For these reasons it is important to have a reliable concentration
+estimate from N-body simulations. 
 Here we show that the concentration parameter in dark matter halos from
 N-body simulations can be reliably estimated from the radially integrated mass
 profile.
@@ -183,85 +183,85 @@ success in the comparison between theoretical results and observations
 of the galaxy distribution obtained from surveys.
 \citep{Springel2005,2011ApJ...740..102K}.
 
-{\bf Navarro et.al. 2010 have used high resolution simulations to show
-  that the full halo density profile is not universal and follows an
-  Einasto density distribution. However, if one is not interested in
-  the very central region of the dark matter halo (where galaxy
-  formation takes place, and where the effects of baryon physics on
-  dark matter distribution is still an uncknown), one can assume an
-  approximation where dark matter overdensities closely follow an
-  universal density profile. In a first approximation this profile is
-  spherically symmetric and its density only dependens on the radial
-  coordinate. Although it is well known that the characteristics of
-  this densty profile depends on redshift (Maccio et.al. 2008), its
-  universal shape seems to be independent of the cosmological
-  parameters and is self-similar for different spatial scales after an
-  adequate re-scaling is applied. \citep{NFW,Taylor2001}
-}
+{\bf FALTA CITEP Navarro et.al. 2010} have used high resolution simulations to show
+that the full halo density profile is not universal and follows an
+Einasto density distribution. 
+However, if one is not interested in the very central region of the
+dark matter halo (where galaxy formation takes place, and where the
+effects of baryon physics on dark matter distribution is still an
+uncknown), one can assume an approximation where dark matter
+overdensities closely follow an universal density profile. 
+In a first approximation this profile is spherically symmetric and
+its density only dependens on the radial coordinate. 
+Although it is well known that the characteristics of
+this densty profile depend on redshift {\bf FALTA CITEP (Maccio
+  et.al. 2008)}, its universal shape seems to be independent of the
+cosmological parameters and is self-similar for different spatial
+scales after an adequate re-scaling is applied \citep{NFW,Taylor2001}.
 
-{\bf In such circumstances}, one the most popular parameterizations
+In such circumstances, one the most popular parameterizations
 for dark matter halo radial density distribution is the
-Navarro-Frenk-White (NFW) profile \citep{NFW}.  This profile is a
-double power law in radius, where the transition break happens at the
-so-called scale radius, $r_s$.  The ratio between the scale radius and
-the virial radius $R_v$ is known as the concentration $c=R_v/r_s$.
+Navarro-Frenk-White (NFW) profile \citep{NFW}.  
+This profile is a double power law in radius, where the transition
+break happens at the so-called scale radius, $r_s$.  
+The ratio between the scale radius and the virial radius $R_v$ is
+known as the concentration $c=R_v/r_s$. 
 Simulations show that the concentration is a strong function of halo
 mass and redshift and provides information about the mass assembly of
-the dark matter halo (Citar paper que reproduce mis graficas y conecta
-C con m(z)).
+the dark matter halo {\bf (Citar paper que reproduce mis graficas y conecta
+C con m(z))}.
 
-Observationally, the relationship between halo mass and concentration
-could provide a potential test of the Cold Dark Matter (CDM) paradigm
-on galactic scales.  For this motivation a great deal of effort has
+{\bf usos de modelos de formacion de galaxias}
+The relationship between halo mass and concentration
+could also provide a potential test of the Cold Dark Matter (CDM)
+paradigm.  
+
+For all these reasons mentioned above a great deal of effort has
 been invested in calibrating this relationship with simulations
 \citep{Neto2007,Duffy2008,Munoz2011,Prada2012,Ludlow2014} and finding
 the best possible way to constraint it with observations
-\citep{Buote2007,Comerford2007,Mandelbaum2008,Giocoli2014,Foex2014,Shan2015}.
+\citep{Buote2007,Comerford2007,Mandelbaum2008,Giocoli2014,Foex2014,Shan2015}. 
 
 In N-body simulations there are two main methods to estimate the
-concentration parameter of a dark matter halo in a N-body simulation.
-The first method takes the particles composing the halos and bins them
-in logarithmic radii to estimate the density in each bin, then it
+concentration parameter of a dark matter halo.
+The first method takes the halo particles and bins them into
+logarithmic radii to estimate the density in each bin, then it 
 proceeds to fit the density as a function of the radius to the NFW
-profile.  A second method uses an analytic property of the NFW profile
+profile.  
+A second method uses an analytic property of the NFW profile
 that relates the maximum of the ratio of the circular velocity to the
 virial velocity.  The concentration can be then found as the root of a
 algebraic equation dependent on this maximum value.
 
 The first method is straightforward to apply but presents two
-disadvantages.  First, it requires a large number of particles in
-order to have a proper density estimate in each bin.  This makes the
-method robust only for halos with at least $10^3$ particles.  The
-second problem is that there is not a way to estimate the optimal
+disadvantages.  
+First, it requires a large number of particles in
+order to have a proper density estimate in each bin.  
+This makes the method robust only for halos with at least $10^3$ particles.  
+The second problem is that there is not a way to estimate the optimal
 radial bin size, different choices produce different results for the
 concentration.
 
-The second method solves the two problems mentioned above.  It works
-with low particle numbers and does not involve data binning.  However,
-it effectively takes into account only a single data point and
+The second method solves the two problems mentioned above.  
+It works with low particle numbers and does not involve data binning.  
+However, it effectively takes into account only a single data point and
 discards the behaviour of the ratio $V_{\rm circ}/V_{\rm vir}$ below
-and above its maxima.  Additionally, small fluctuations on the value
-of this maximum can yield large perturbations on the estimated
-concentration parameter.
+and above its maxima.  
+Additionally, small fluctuations on the value of this maximum can
+yield large perturbations on the estimated concentration parameter. 
 
-In this paper we propose a new method to estimate the dark matter halo
-concentration in halos from N-body simulations.  Our method builds the
-cumulative mass profile from the particle to find the best possible
-concentration value fitting this distribution.  This proposal has two
-advantages with respect to the two methods mentioned above.  It does
-not involve any data binning and does not throw away data points {\bf
-  resulting in a robust estimate even at low resolution/particle
-  numbers. In the same sence, since the method does not require any
-  binning, there is no need to tune numerical parameters, which
-  provide definitive/independent estimates for the concentration
-  parameter.}.
+In this paper we show that integrated mass profile can be used  to
+estimate the dark matter halo concentration in halos from N-body
+simulations.  
+This has two advantages with respect to the two methods mentioned
+above.  
+It does not involve any data binning and does not throw away data
+points resulting in a robust estimate even at low resolution/particle
+numbers.  
+Furthermore, since the method does not require any binning,
+there is no need to tune numerical parameters, providing a new
+independent method to estimate the concentration parameter.
 
-
-{\it mi opinión es que el método es muy bueno, y sobresalta sobre los
-  otros dos en sus ventaja: robusto, no requiere bineo, aplica bien en
-  resoluciones pobres. Como herramienta (que es lo que se está
-  vendiendo en el trabajo, un método, eso es lo que hay que recalcar y
-  resaltar)}
 
 \section{Basic properties of the NFW density profile}
 \label{sec:basics}
