reescribiendo cada frase (?)

--- a/paper/paper.tex
+++ b/paper/paper.tex
@@ -125,15 +125,16 @@ $^2$Instituto de F\'{\i}sica - FCEN, Universidad de Antioquia, Calle
 
 \begin{abstract}
 
-In a dark matter dominated universe galaxy properties are driven by
-the dark matter halo host.
-One of the key structural halo properties is the concentration. 
+
+Galaxy properties are driven by its dark matter halo host.
+A dark matter halo's concentration is on the key structural
+properties. 
 [EN QUE MODELOS IMPORTA LA CONCENTRACION?]
-For these reasons it is important to have a reliable concentration
-estimate from N-body simulations. 
-Here we show that the concentration parameter in dark matter halos from
-N-body simulations can be reliably estimated from the radially integrated mass
-profile.
+This drives the pursue to make the concentration estimates of
+simulated halos as reliable as possible. 
+Here we show the radially integrated mass profile can be converted
+into a powerful tool to estimate concentratios.
+
 The main advantage of this approach is that it uses the full
 particle information without any binning, which makes it reliable in
 cases when low numerical resolution becomes a limitation for other
@@ -574,7 +575,7 @@ particle halos and $0.5\%$ for $20000$ particle halos. {\bf The method
 
 We use data from the MultiDark cosmological simulation that follows
 the non-linear evolution of a dark matter density field sampled with
-$2048^3$ particles over a cubic box of $1000$ \hMpc on a side.  The
+$2048^3$ particles over a cubic box of $1000\ \hMpc$ on a side.  The
 data is publicly available through \url{http://www.cosmosim.org/}.
 More details about the structure of the database and the simulation
 can be found in \citep{2013AN....334..691R}.
