--- a/paper/paper.tex
+++ b/paper/paper.tex
@@ -126,15 +126,15 @@ $^2$Instituto de F\'{\i}sica - FCEN, Universidad de Antioquia, Calle
 \begin{abstract}
 
 
-Galaxy properties are driven by its dark matter halo host.
-A dark matter halo's concentration is on the key structural
-properties. 
-[EN QUE MODELOS IMPORTA LA CONCENTRACION?]
-This drives the pursue to make the concentration estimates of
-simulated halos as reliable as possible. 
-Here we show the radially integrated mass profile can be converted
-into a powerful tool to estimate concentratios.
-
+Galaxy properties are coupled to the structural of its dark
+matter halo host. 
+One of the key quantities is the halo density profile which, assuming
+a  Navarro-Frenk-White parameterization, can be described by the
+concentration.
+This has motivated the development of different algorithms to estimate
+the concentraion in N-body halos.
+Here we present a new algorithm to estimate the concentration
+based on the radially integrated mass profile
 The main advantage of this approach is that it uses the full
 particle information without any binning, which makes it reliable in
 cases when low numerical resolution becomes a limitation for other
@@ -149,9 +149,7 @@ concentrations varies with halo resolution. For halos
 sampled with $20$ particles our method recovers the input
 concentration with $10\%$ accuracy. 
 For the maximum radial velocity method it is on the order of $20\%$
-while density profile methods perform worst at the low resolution
-limit since they require at least 200 particles inside the virial
-radius to make a reliable estimate of the density profile. 
+while density profile methods perform worst at the low resolution.
 For halos with $2\times 10^4$ particles our method achieves an
 accuracy of $0.01\%$ while the velocity and density profile methods
 achieve $0.1\%$ and $1\%$, respectively. 
@@ -159,8 +157,7 @@ We measure the mass-concentration relationship on N-body
 data taking care of using halos sampled with at least $200$
 particles. We find that at low masses $10^{12}\hMsun <
 M<10^{13}\hMsun$ our method yields median concentration values lower
-by a $15\%-20\%$ compared to the velocity and density methods ({\bf
-  why?}).  
+by a $15\%-20\%$ compared to the velocity and density methods 
 At higher masses $3\times 10^{13}\hMsun < M < 2\times
 10^{14}\hMsun$ the three methods give similar results.
 \end{abstract}
@@ -175,56 +172,48 @@ Methods: data analysis - numerical - N-body simulations
 \section{Introduction}
 \label{sec:introduction}
 %*************************************************************************
-In the concordance cosmological paradigm the matter content of the
-Universe is dominated by dark matter, a collisionless fluid shaped by
-gravitational interactions.  In the last three decades simulations of
-dark matter dominated universes have provided valuable insights into
-the large scale structure formation process, showing a remarkable
-success in the comparison between theoretical results and observations
-of the galaxy distribution obtained from surveys.
-\citep{Springel2005,2011ApJ...740..102K}.
+In the current structure formation paradigm the properties of galaxies
+are coupled to the evolution of their dark matter (DM) hosting halo.
+This dependence has motivated the detailed study of dark matter halo
+properties defining its formation history and internal structure. 
+In particular, the DM distribution inside a halo is key to
+understand the sizes and dynamics of galaxies.
 
-{\bf FALTA CITEP Navarro et.al. 2010} have used high resolution simulations to show
-that the full halo density profile is not universal and follows an
-Einasto density distribution. 
-However, if one is not interested in the very central region of the
-dark matter halo (where galaxy formation takes place, and where the
-effects of baryon physics on dark matter distribution is still an
-uncknown), one can assume an approximation where dark matter
-overdensities closely follow an universal density profile. 
+
+The internal matter distribution is parameterized through the density
+profile. 
 In a first approximation this profile is spherically symmetric and
 its density only dependens on the radial coordinate. 
-Although it is well known that the characteristics of
-this densty profile depend on redshift {\bf FALTA CITEP (Maccio
-  et.al. 2008)}, its universal shape seems to be independent of the
-cosmological parameters and is self-similar for different spatial
-scales after an adequate re-scaling is applied \citep{NFW,Taylor2001}.
-
-In such circumstances, one the most popular parameterizations
-for dark matter halo radial density distribution is the
-Navarro-Frenk-White (NFW) profile \citep{NFW}.  
-This profile is a double power law in radius, where the transition
+One the most popular parameterizations for DM halo radial
+density distribution is the Navarro-Frenk-White (NFW) profile
+\citep{NFW}.   
+Furthermore, if one is not interested in the very central region of the
+dark matter halo (where galaxy formation takes place, and where the
+effects of baryon physics on dark matter distribution is still an
+unknown), one can assume that this profile is universal.
+\citep{Navarro2010}.  
+ This profile is a double power law in radius, where the transition
 break happens at the so-called scale radius, $r_s$.  
 The ratio between the scale radius and the virial radius $R_v$ is
 known as the concentration $c=R_v/r_s$. 
-Simulations show that the concentration is a strong function of halo
-mass and redshift and provides information about the mass assembly of
-the dark matter halo {\bf (Citar paper que reproduce mis graficas y conecta
-C con m(z))}.
 
-{\bf usos de modelos de formacion de galaxias}
-The relationship between halo mass and concentration
-could also provide a potential test of the Cold Dark Matter (CDM)
-paradigm.  
 
-For all these reasons mentioned above a great deal of effort has
-been invested in calibrating this relationship with simulations
-\citep{Neto2007,Duffy2008,Munoz2011,Prada2012,Ludlow2014} and finding
-the best possible way to constraint it with observations
-\citep{Buote2007,Comerford2007,Mandelbaum2008,Giocoli2014,Foex2014,Shan2015}. 
+The NFW profile parameterization thus provides the conceptual
+framework to study simulated dark matter halos as a function of
+redshift and cosmological parameters.
+Here the central quantity is the concentration. 
+In these studies 
+\citep{Neto2007,Maccio2008,Duffy2008,Munoz2011,Prada2012,Ludlow2014} 
+the results are summarized through the
+mass-concentration relationship; that is the distribution of
+concentration values at a fixed halo mass and redshift.
+The biggest challenge in such numerical experiments is having a
+reliable algorithm to estimate the concentration. 
+Such an algorithm should provide unbiased results and must be robust
+when applied to simulations of different numerical resolution.  
 
-In N-body simulations there are two main methods to estimate the
-concentration parameter of a dark matter halo.
+There are two main algorithms to estimate the concentration parameter
+of a N-body dark matter halo. 
 The first method takes the halo particles and bins them into
 logarithmic radii to estimate the density in each bin, then it 
 proceeds to fit the density as a function of the radius to the NFW
@@ -248,20 +237,26 @@ It works with low particle numbers and does not involve data binning.
 However, it effectively takes into account only a single data point and
 discards the behaviour of the ratio $V_{\rm circ}/V_{\rm vir}$ below
 and above its maxima.  
-Additionally, small fluctuations on the value of this maximum can
-yield large perturbations on the estimated concentration parameter. 
+Small fluctuations on the value of this maximum can yield large
+perturbations on the estimated concentration parameter.  
 
-In this paper we show that integrated mass profile can be used  to
-estimate the dark matter halo concentration in halos from N-body
-simulations.  
-This has two advantages with respect to the two methods mentioned
-above.  
+In this paper we present a third alternative based on fitting the
+integrated mass profile.
+This approach has two advantages with respect to the above mentioned
+methods.  
 It does not involve any data binning and does not throw away data
-points resulting in a robust estimate even at low resolution/particle
-numbers.  
-Furthermore, since the method does not require any binning,
-there is no need to tune numerical parameters, providing a new
-independent method to estimate the concentration parameter.
+points. 
+This results in a robust estimate even at low resolution/particle
+numbers.   
+Furthermore, since the method does not require any binning, there is
+no need to tune numerical parameters, providing a new independent
+method to estimate the concentration parameter. 
+Here we provide a detailed description of this method and a
+comparison against the two traditional methods by measuring its
+performance both on mock halos and N-body halos.
+
+
+
 
 
 \section{Basic properties of the NFW density profile}
