--- a/paper/references.bib
+++ b/paper/references.bib
@@ -16,6 +16,25 @@ archivePrefix = "arXiv",
    adsurl = {http://adsabs.harvard.edu/abs/2013PASP..125..306F},
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
+
+@ARTICLE{Maccio2008,
+   author = {{Macci{\`o}}, A.~V. and {Dutton}, A.~A. and {van den Bosch}, F.~C.
+	},
+    title = "{Concentration, spin and shape of dark matter haloes as a function of the cosmological model: WMAP1, WMAP3 and WMAP5 results}",
+  journal = {\mnras},
+archivePrefix = "arXiv",
+   eprint = {0805.1926},
+ keywords = {gravitation , methods: N-body simulation , methods: numerical , galaxies: haloes , cosmology: theory , dark matter},
+     year = 2008,
+    month = dec,
+   volume = 391,
+    pages = {1940-1954},
+      doi = {10.1111/j.1365-2966.2008.14029.x},
+   adsurl = {http://adsabs.harvard.edu/abs/2008MNRAS.391.1940M},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
 @ARTICLE{Munoz2011,
    author = {{Mu{\~n}oz-Cuartas}, J.~C. and {Macci{\`o}}, A.~V. and {Gottl{\"o}ber}, S. and 
 	{Dutton}, A.~A.},
